# piped-rust-sdk

./: Cargo.toml  README.md
examples/: Cargo.toml  bulk_feed.rs  channel.rs  comments.rs  playlist.rs  search_channel.rs  search_suggestions.rs  trending.rs  video.rs
piped/: Cargo.toml
piped/src/: client.rs  error.rs  lib.rs  structure.rs
