[package]
edition = "2018"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
piped = {path = "../piped"}
reqwest = "^0.11"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[[example]]
name = "channel"
path = "channel.rs"

[[example]]
name = "playlist"
path = "playlist.rs"

[[example]]
name = "trending"
path = "trending.rs"

[[example]]
name = "video"
path = "video.rs"

[[example]]
name = "search_suggestions"
path = "search_suggestions.rs"

[[example]]
name = "search_channel"
path = "search_channel.rs"

[[example]]
name = "comments"
path = "comments.rs"

[[example]]
name = "bulk_feed"
path = "bulk_feed.rs"
