[package]
authors = ["Kavin <kavin@kavin.rocks>"]
edition = "2018"
include = [
  "src/*.rs",
  "Cargo.toml",
]
name = "piped"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
