[package]
authors = ["Kavin <kavin@kavin.rocks>"]
description = "An API wrapper for the privacy friendly YouTube frontend called Piped."
edition = "2018"
keywords = ["youtube"]
license = "GPL-3.0"
name = "piped"
repository = "https://github.com/TeamPiped/piped-rust-sdk"
version = "0.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.11"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
url = "^2.2"

thiserror = "^1.0"
